rnsc/test_data/integration/error/parser/class_body/err_in_class_name_recovers.rns
.class @int not_a_number
unexpected
.super java/lang/Object

